# web_proc_macros

./: Cargo.toml  README.md
src/: delete_macro.rs  error_kind_macro.rs  impl_kind_macro.rs  insert_macro.rs  insert_query.rs  lib.rs  partial_object.rs  partial_struct.rs  reading_option.rs  select_macro.rs  update_macro.rs
