[package]
name = "web_proc_macros"
version = "0.2.0"
edition = "2021"

[lib]
name = "web_proc_macros"
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = {version = "1.0.109", features = ["full"]}
quote= "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
serde = "1.0.180"
serde_derive = "1.0.180"